<resources>
    <string name="app_name">cosmetics-store-app</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_name">Имя</string>
    <string name="sign_in">Войти</string>
    <string name="surname">Фамилия</string>
    <string name="title_sign_in">Вход</string>
    <string name="term_loyalty_program"><u>условия программы лояльности</u></string>
    <string name="agreement">Нажимая кнопку \" Войти \", Вы принимаете</string>
    <string name="main_menu">Главная</string>
    <string name="catalog_menu">Каталог</string>
    <string name="basket_menu">Корзина</string>
    <string name="special_offer_menu">Акции</string>
    <string name="profile_menu">Профиль</string>
    <string name="main_title">Главная</string>
</resources>