<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="ml.vladmikh.projects.cosmetics_store_app.ui.registration.RegistrationFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_marginTop="@dimen/_16dp"
        android:layout_marginBottom="@dimen/_8dp"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:text="@string/title_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/_16dp"
            android:paddingEnd="@dimen/_16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutName"
                style="@style/Theme.Cosmeticsstoreapp.FieldLightGray"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_128dp"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name"
                    app:errorEnabled="true"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutSurname"
                style="@style/Theme.Cosmeticsstoreapp.FieldLightGray"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16dp"
                app:layout_constraintTop_toBottomOf="@id/textInputLayoutName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextSurname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/surname"
                    app:errorEnabled="true"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutPhoneNumber"
                style="@style/Theme.Cosmeticsstoreapp.FieldLightGray"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16dp"
                app:layout_constraintTop_toBottomOf="@id/textInputLayoutSurname">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name"
                    app:errorEnabled="true"/>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonRegistration"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_51dp"
                android:background="@drawable/button_light_pink_drawable"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sp"
                android:layout_marginTop="@dimen/_32dp"
                android:textAllCaps="false"
                app:layout_constraintTop_toBottomOf="@id/textInputLayoutPhoneNumber"/>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewAgreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sp"
                android:textColor="@color/text_grey"
                android:layout_marginTop="@dimen/_16dp"
                android:text="@string/agreement"
                app:layout_constraintBottom_toTopOf="@id/textViewLinkPolicy"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewLinkPolicy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10sp"
                android:textColor="@color/text_grey"
                android:text="@string/term_loyalty_program"
                android:layout_marginBottom="@dimen/_12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>